--- a/src/content/docs/concepts/multi-sites.mdx
+++ b/src/content/docs/concepts/multi-sites.mdx
@@ -5,7 +5,7 @@ description: Architecture multi-tenant avec gestion des sites et zones imbriqué
 
 import { Aside } from '@astrojs/starlight/components';
 
-XetaSuite est conçu pour gérer **plusieurs sites** (multi-tenant), chacun avec ses propres zones, matériels et permissions.
+XetaSuite est conçu pour gérer **plusieurs sites** (multi-tenant), chacun avec ses propres zones, équipements et permissions.
 
 ## Hiérarchie des entités
 
@@ -51,50 +51,9 @@ class CompanyPolicy
 }
 ```
 
-## Sites réguliers
+## Changement de site
 
-Chaque site possède :
-- Ses propres **zones** (arborescence imbriquée)
-- Ses propres **matériels**
-- Ses propres **rôles et permissions**
-- Son propre **inventaire** de pièces
-
-## Zones imbriquées
-
-Les zones utilisent une structure auto-référentielle :
-
-```php
-class Zone extends Model
-{
-    public function parent(): BelongsTo
-    {
-        return $this->belongsTo(Zone::class, 'parent_id');
-    }
-
-    public function children(): HasMany
-    {
-        return $this->hasMany(Zone::class, 'parent_id');
-    }
-}
-```
-
-### Exemple d'arborescence
-
-```
-Site Paris
-├── Bâtiment A
-│   ├── Étage 1
-│   │   ├── Salle serveur
-│   │   └── Open space
-│   └── Étage 2
-│       └── Direction
-└── Bâtiment B
-    └── Entrepôt
-```
-
-## Changement de site (Site Switching)
-
-L'utilisateur peut changer de site via le **SiteSwitcher** :
+Les utilisateurs peuvent changer de site via le **SiteSwitcher** :
 
 ```typescript
 // Frontend - SiteSwitcher.tsx
@@ -104,44 +63,9 @@ const handleSiteChange = async (site: UserSite) => {
 };
 ```
 
-```php
-// Backend - Met à jour current_site_id
-$user->update(['current_site_id' => $request->site_id]);
-```
-
 <Aside type="caution">
   Un **rechargement de page** est nécessaire après le changement de site pour rafraîchir les permissions dans le contexte React.
 </Aside>
-
-## Middleware de site
-
-### SetCurrentSite
-
-```php
-class SetCurrentSite
-{
-    public function handle(Request $request, Closure $next)
-    {
-        $site = $request->user()?->currentSite;
-
-        if ($site) {
-            session(['is_on_headquarters' => $site->is_headquarters]);
-        }
-
-        return $next($request);
-    }
-}
-```
-
-### Helper global
-
-```php
-// app/helpers.php
-function isOnHeadquarters(): bool
-{
-    return session('is_on_headquarters', false);
-}
-```
 
 ## Structure de données User
 
@@ -160,13 +84,6 @@ interface UserSite {
     is_headquarters: boolean;
 }
 ```
-
-## Bonnes pratiques
-
-1. **Toujours vérifier le site** avant les opérations sensibles
-2. **Utiliser les Policies** pour la logique d'autorisation HQ
-3. **Ne jamais hardcoder** les vérifications de site dans les controllers
-4. **Tester les deux contextes** (HQ et site régulier)
 
 ## Prochaines étapes
 
