--- a/src/content/docs/en/api/endpoints.mdx
+++ b/src/content/docs/en/api/endpoints.mdx
@@ -142,14 +142,14 @@ GET /maintenances?material_id=5&status=scheduled&type=preventive
 
 | Method | Endpoint | Description |
 |--------|----------|-------------|
-| GET | `/companies` | List suppliers |
-| GET | `/companies/{id}` | Supplier details |
-| POST | `/companies` | Create a supplier |
-| PATCH | `/companies/{id}` | Update a supplier |
-| DELETE | `/companies/{id}` | Delete a supplier |
+| GET | `/companies` | List companies |
+| GET | `/companies/{id}` | Company details |
+| POST | `/companies` | Create a company |
+| PATCH | `/companies/{id}` | Update a company |
+| DELETE | `/companies/{id}` | Delete a company |
 
 <Aside type="note">
-  Companies are only accessible from the Headquarters site.
+  `Create`, `Update` & `Delete` actions for Companies are only accessible from the Headquarters site.
 </Aside>
 
 ## Users
