--- a/src/content/docs/en/deployment/production.mdx
+++ b/src/content/docs/en/deployment/production.mdx
@@ -128,7 +128,7 @@ server {
 2. **Configure environment**
 
    Create `.env`:
-   ```txt
+   ```bash
    VITE_API_URL=https://api.xetasuite.com
    ```
 
