--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,20 +1,23 @@
 ---
-title: XetaSuite ERP
+title: La solution ERP nouvelle génération
 description: Solution ERP multi-sites moderne pour la gestion de maintenance, incidents et inventaire.
 template: splash
 hero:
   tagline: |
-    La solution ERP nouvelle génération pour gérer vos sites, équipements et équipes.
+    Solution ERP multi-sites moderne pour gérer vos sites, équipements et équipes.
     Multi-sites • Temps réel • Open Source
   image:
-    file: ../../assets/logo-dark.svg
+    alt: XetaSuite logo
+    dark: ../../assets/logo-dark.svg
+    light: ../../assets/logo.svg
+
   actions:
     - text: Démarrer →
       link: /getting-started/backend/
       icon: right-arrow
       variant: primary
     - text: Voir la démo
-      link: https://demo.xetasuite.com
+      link: https://demo.xetasuite.xetaravel.com
       icon: external
       variant: minimal
 ---
@@ -82,7 +85,7 @@ import videoSrc from '../../assets/xetasuite-presentation.mp4';
   </div>
   <div class="tech-item">
     <strong>Database</strong>
-    <span>PostgreSQL 17</span>
+    <span>PostgreSQL 18</span>
   </div>
   <div class="tech-item">
     <strong>Permissions</strong>
@@ -100,22 +103,22 @@ import videoSrc from '../../assets/xetasuite-presentation.mp4';
   <LinkCard
     title="Installation Backend"
     description="Configurez le serveur Laravel avec PostgreSQL en quelques minutes."
-    href="getting-started/backend/"
+    href="/getting-started/backend/"
   />
   <LinkCard
     title="Installation Frontend"
     description="Lancez l'interface React avec Vite et connectez-vous à l'API."
-    href="getting-started/frontend/"
+    href="/getting-started/frontend/"
   />
   <LinkCard
     title="Authentification"
     description="Maîtrisez le flow d'authentification Sanctum SPA (cookies)."
-    href="concepts/authentication/"
+    href="/concepts/authentication/"
   />
   <LinkCard
     title="Architecture Multi-Sites"
     description="Comprenez le fonctionnement multi-tenant avec permissions par site."
-    href="concepts/multi-sites/"
+    href="/concepts/multi-sites/"
   />
 </CardGrid>
 
@@ -123,6 +126,6 @@ import videoSrc from '../../assets/xetasuite-presentation.mp4';
   <h3>🚀 Prêt à essayer ?</h3>
   <p>Explorez XetaSuite avec des données de démonstration. Aucune inscription requise.</p>
   <a href="https://demo.xetasuite.xetaravel.com" class="demo-button">
-    Accéder à la démo gratuite →
+    Accéder à la démo →
   </a>
 </div>
