--- a/src/content/docs/concepts/roles-permissions.mdx
+++ b/src/content/docs/concepts/roles-permissions.mdx
@@ -103,48 +103,45 @@ const { hasPermission, hasRole, hasAnyPermission } = useAuth();
 | `update` | Modifier |
 | `delete` | Supprimer |
 
-### Exemples
+### Par module
 
-- `company.viewAny`, `company.view`, `company.create`, `company.update`, `company.delete`
-- `material.viewAny`, `material.view`, `material.create`, `material.update`, `material.delete`
-- `user.viewAny`, `user.view`, `user.create`, `user.update`, `user.delete`
+| Module | Permissions |
+|--------|-------------|
+| Sites | `site.viewAny`, `site.view`, `site.create`, `site.update`, `site.delete` |
+| Zones | `zone.viewAny`, `zone.view`, `zone.create`, `zone.update`, `zone.delete` |
+| Matériels | `material.viewAny`, `material.view`, `material.create`, `material.update`, `material.delete`, `material.generateQrCode`, `material.scanQrCode` |
+| Maintenances | `maintenance.viewAny`, `maintenance.view`, `maintenance.create`, `maintenance.update`, `maintenance.delete` |
+| Incidents | `incident.viewAny`, `incident.view`, `incident.create`, `incident.update`, `incident.delete` |
+| Nettoyages | `cleaning.viewAny`, `cleaning.view`, `cleaning.create`, `cleaning.update`, `cleaning.delete` |
+| Pièces | `item.viewAny`, `item.view`, `item.create`, `item.update`, `item.delete`, `item.generateQrCode`, `item.scanQrCode` |
+| Mouvements | `item-movement.viewAny`, `item-movement.view`, `item-movement.create`, `item-movement.update`, `item-movement.delete` |
+| Entreprises | `company.viewAny`, `company.view`, `company.create`, `company.update`, `company.delete` |
+| Utilisateurs | `user.viewAny`, `user.view`, `user.create`, `user.update`, `user.delete`, `user.restore`, `user.assignDirectPermission`, `user.assignSite` |
+| Rôles | `role.viewAny`, `role.view`, `role.create`, `role.update`, `role.delete` |
+| Permissions | `permission.viewAny`, `permission.view`, `permission.create`, `permission.update`, `permission.delete` |
+| Paramètres | `setting.viewAny`, `setting.view`, `setting.update`, |
 
-## Middleware Chain
+## Chaîne de Middleware
 
-L'ordre des middlewares est critique :
+Le middleware de permissions s'exécute après la définition du contexte du site :
 
 ```
 SetCurrentSite → SetCurrentPermissionsAndRoles → Controller
 ```
 
-1. **SetCurrentSite** - Charge le site actuel depuis `user.current_site_id`
-2. **SetCurrentPermissionsAndRoles** - Appelle `setPermissionsTeamId($siteId)`
-3. **Controller** - Les permissions sont maintenant scopées au bon site
+1. **SetCurrentSite** - Lit `user.current_site_id`, met en cache `is_on_headquarters`
+2. **SetCurrentPermissionsAndRoles** - Appelle `setPermissionsTeamId(siteId)`, rafraîchit les relations en cache
 
-## Création de rôles
+## Ressources HQ-only
+
+Certaines ressources (Companies) ne sont accessibles que depuis le siège :
 
 ```php
-use Spatie\Permission\Models\Role;
-
-// Créer un rôle scopé au site
-setPermissionsTeamId($site->id);
-
-$role = Role::create([
-    'name' => 'manager',
-    'guard_name' => 'web',
-]);
-
-// Assigner des permissions
-$role->givePermissionTo([
-    'material.viewAny',
-    'material.view',
-    'material.create',
-    'zone.viewAny',
-    'zone.view',
-]);
+public function before(User $user, string $ability): ?bool
+{
+    if (! isOnHeadquarters()) {
+        return false;  // Bloque l'accès depuis les sites réguliers
+    }
+    return null;  // Continue vers la vérification spécifique
+}
 ```
-
-## Prochaines étapes
-
-- [Multi-Sites](/concepts/multi-sites/) - Gestion multi-tenant
-- [Gestion Utilisateurs](/admin/users/) - Administration des utilisateurs
