--- a/src/content/docs/en/admin/roles.mdx
+++ b/src/content/docs/en/admin/roles.mdx
@@ -13,7 +13,6 @@ Roles are **scoped by site** thanks to Spatie Laravel-Permission with teams mode
 |------|-------------|
 | `admin` | Full access to the site |
 | `manager` | Operations management |
-| `technician` | Technical interventions |
 | `user` | Read-only access |
 
 ## Create a role
@@ -34,6 +33,8 @@ POST /api/v1/roles
 ```json
 {
     "name": "supervisor",
+    "level": 50,
+    "site_id": 1,
     "permissions": [
         "material.viewAny",
         "material.view",
@@ -48,7 +49,7 @@ POST /api/v1/roles
 ```
 
 <Aside type="caution">
-  Roles are created in the context of the current site. Switch sites to create a role on another site.
+  Site assigned to role can not be changed after created.
 </Aside>
 
 ## Modify a role
@@ -71,30 +72,7 @@ PATCH /api/v1/roles/{id}
 
 ## Permissions by module
 
-### Materials
-- `material.viewAny`, `material.view`, `material.create`, `material.update`, `material.delete`
-
-### Zones
-- `zone.viewAny`, `zone.view`, `zone.create`, `zone.update`, `zone.delete`
-
-### Maintenances
-- `maintenance.viewAny`, `maintenance.view`, `maintenance.create`, `maintenance.update`, `maintenance.delete`
-
-### Incidents
-- `incident.viewAny`, `incident.view`, `incident.create`, `incident.update`, `incident.delete`
-
-### Cleanings
-- `cleaning.viewAny`, `cleaning.view`, `cleaning.create`, `cleaning.update`, `cleaning.delete`
-
-### Inventory
-- `item.viewAny`, `item.view`, `item.create`, `item.update`, `item.delete`
-- `item-movement.viewAny`, `item-movement.view`, `item-movement.create`, `item-movement.update`, `item-movement.delete`
-
-### Suppliers (HQ only)
-- `company.viewAny`, `company.view`, `company.create`, `company.update`, `company.delete`
-
-### Users
-- `user.viewAny`, `user.view`, `user.create`, `user.update`, `user.delete`
+See all permissions [permissions page](/en/admin/permissions/).
 
 ## Delete a role
 
