--- a/src/content/docs/guides/create-company.mdx
+++ b/src/content/docs/guides/create-company.mdx
@@ -1,6 +1,6 @@
 ---
-title: Créer un fournisseur
-description: Guide pour créer et gérer les fournisseurs (Companies) dans XetaSuite.
+title: Créer une Entreprise
+description: Guide pour créer et gérer les Entreprises dans XetaSuite.
 ---
 
 import { Steps, Aside } from '@astrojs/starlight/components';
@@ -20,15 +20,15 @@ Une Company peut avoir un ou plusieurs types :
 | `ITEM_PROVIDER` | Fournisseur de pièces détachées |
 | `MAINTENANCE_PROVIDER` | Prestataire de maintenance |
 
-## Créer une Company
+## Créer une Entreprise
 
 <Steps>
 
-1. **Accéder au module Fournisseurs**
+1. **Accéder au module Entreprises**
 
-   Depuis le menu latéral, cliquez sur **Fournisseurs** (disponible uniquement sur le siège).
+   Depuis le menu latéral, cliquez sur **Entreprises** (disponible uniquement sur le siège).
 
-2. **Cliquer sur "Nouveau fournisseur"**
+2. **Cliquer sur "Nouvelle Entreprise"**
 
    Le formulaire de création s'ouvre en modal.
 
@@ -40,7 +40,7 @@ Une Company peut avoir un ou plusieurs types :
    | Email | ❌ | Email de contact |
    | Téléphone | ❌ | Numéro de téléphone |
    | Adresse | ❌ | Adresse postale |
-   | Types | ✅ | Fournisseur pièces et/ou Maintenancier |
+   | Types | ✅ | Fournisseur pièces et/ou prestataires de maintenance |
 
 4. **Enregistrer**
 
@@ -48,7 +48,7 @@ Une Company peut avoir un ou plusieurs types :
 
 </Steps>
 
-## API - Créer une Company
+## API - Créer une Entreprise
 
 ### Endpoint
 
@@ -91,7 +91,7 @@ POST /api/v1/companies
 | Action | Permission |
 |--------|------------|
 | Voir la liste | `company.viewAny` |
-| Voir un fournisseur | `company.view` |
+| Voir une entreprise | `company.view` |
 | Créer | `company.create` |
 | Modifier | `company.update` |
 | Supprimer | `company.delete` |
